--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
         
         <!-- intestazione -->
          <section class="intestazione">
-            <img id="logo" src="./img/logo.svg" alt="The Booleaner">
-            
+            <img id="logo" src="./img/logo.svg" alt="The Booleaner"> 
          </section>
 
          <!-- sezione del titolo -->
-          <section></section>
+          <section class="Titolo">
+            <h1>Internet deve essere al servizio del "bene pubblico di Tim Berners-Lee</h1>
+            <h4>Scritto da <b>the Booleaner</b></h4>
+            <h5>il 10/10/2020</h5>
+          </section>
     </header>
     <main></main>
     <footer></footer>
