--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
           </section>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <h4 >Potrebbero interessarti</h4>
+       
+        <!-- immagine file link 1 -->
+        <div id="articolo1">
+            <p>Lorem ipsum dolor </p>
+        </div>
+       
+        <!-- immagine file link 2 -->
+        <div id="articolo2">
+            <p>Lorem ipsum dolor </p>
+        </div>
+    </footer>
 </body>
 </html>
