--- a/index.html
+++ b/index.html
@@ -20,7 +20,81 @@
             <h5>il 10/10/2020</h5>
           </section>
     </header>
-    <main></main>
+    <main>
+        <!-- immagini con descrizione -->
+         <section>
+            <!-- immagini -->
+            <div>
+                <img src="./img/tim-1.jpg" alt="Tim Berners-Lee che parla">
+                <img src="./img/tim-2.jpg" alt="Tim Berners-Lee che parla">
+            </div>
+            <!-- descrizione -->
+            <div>
+            <p class="caption"> 1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</p>
+            <p class="caption"> 2st Photo: Wikimedia, by Paul Clarke </p>
+            </div>
+         </section>
+
+        <!-- primo testo -->
+          <section>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur quam odio deleniti doloribus voluptatem natus rem magni fugiat consequuntur praesentium, nisi est, consectetur inventore omnis distinctio iusto autem, quaerat pariatur. <b class="evidenziato">ste nulla facere deleniti excepturi, vel obcaecati</b> I dignissimos soluta repellat asperiores numquam, in consequuntur fuga libero reprehenderit eum hic? Facere, harum tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique eum, modi veniam quo, porro maxime obcaecati dolores, fugiat suscipit sit cum? Cum quo qui, similique optio nam ea sint eius!
+          </section>
+
+        <!-- elenco -->
+         <section class="elenco">
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </li>
+            </ul>
+         </section>
+
+        <!-- tabella -->
+          <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th>lorem ipsum dolor</th>
+                        <th>lorem ipsum dolor</th>
+                        <th>lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <div>
+                <tbody>
+                    <tr class="colore-azzurro">
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione neque sed eos aliquid, provident tenetur rem vel velit repudiandae nobis, voluptatum quam enim eveniet accusantium, quo accusamus debitis veritatis! Officia.</td>
+                    </tr>
+                    <tr>
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione neque sed eos aliquid, provident tenetur rem vel velit repudiandae nobis, voluptatum quam enim eveniet accusantium, quo accusamus debitis veritatis! Officia.</td>
+                    </tr>
+                    <tr class="colore-azzurro">
+                        <td>lorem ipsum dolor</td>
+                        <td>lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione neque sed eos aliquid, provident tenetur rem vel velit repudiandae nobis, voluptatum quam enim eveniet accusantium, quo accusamus debitis veritatis! Officia.</td>
+                    </tr>
+                </tbody>
+                </div>
+            </table>
+          </section>
+
+        <!-- secondo testo -->
+        <section>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur quam odio deleniti doloribus voluptatem natus rem magni fugiat consequuntur praesentium, nisi est, consectetur inventore omnis distinctio iusto autem, quaerat pariatur. <b class="evidenziato">ste nulla facere deleniti excepturi, vel obcaecati</b> I dignissimos soluta repellat asperiores numquam, in consequuntur fuga libero reprehenderit eum hic? Facere, harum tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique eum, modi veniam quo, porro maxime obcaecati dolores, fugiat suscipit sit cum? Cum quo qui, similique optio nam ea sint eius!
+          </section>
+
+
+        
+    </main>
     <footer>
         <h4 >Potrebbero interessarti</h4>
        
