--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/stile.css">
+    <!-- <link rel="stylesheet" href="./css/stile.css"> -->
+    <link rel="stylesheet" href="./css/stile-bonus.css">
+
     <title>The Booleaner</title>
 </head>
 <body>
