--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         
         <!-- intestazione -->
          <section class="intestazione">
+            <!-- div -->
             <img id="logo" src="./img/logo.svg" alt="The Booleaner"> 
+            <!-- div -->
          </section>
 
-         <!-- sezione del titolo -->
+         <!-- sezione del titolo  -->
           <section class="Titolo">
             <h1>Internet deve essere al servizio del "bene pubblico di Tim Berners-Lee</h1>
+                            <!-- qui era meglio usare uno span al posto di b perchè è il titolo -->
             <h4>Scritto da <b>the Booleaner</b></h4>
             <h5>il 10/10/2020</h5>
           </section>
@@ -32,13 +35,15 @@
             </div>
             <!-- descrizione -->
             <div>
-            <p class="caption"> 1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</p>
-            <p class="caption"> 2st Photo: Wikimedia, by Paul Clarke </p>
+                <!-- qui meglio utilizzare un fig caption come tag che racchiude p -->
+                <p class="caption"> 1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</p>
+                <p class="caption"> 2st Photo: Wikimedia, by Paul Clarke </p>
             </div>
          </section>
 
         <!-- primo testo -->
           <section>
+            <!-- anche qui usare span al posto di b -->
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur quam odio deleniti doloribus voluptatem natus rem magni fugiat consequuntur praesentium, nisi est, consectetur inventore omnis distinctio iusto autem, quaerat pariatur. <b class="evidenziato">ste nulla facere deleniti excepturi, vel obcaecati</b> I dignissimos soluta repellat asperiores numquam, in consequuntur fuga libero reprehenderit eum hic? Facere, harum tempora. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique eum, modi veniam quo, porro maxime obcaecati dolores, fugiat suscipit sit cum? Cum quo qui, similique optio nam ea sint eius!
           </section>
 
